HexaEngine.DirectXTex.Native/HexaTexture.h

	API constexpr bool IsValid(_In_ DXGI_FORMAT& fmt) noexcept;
	API bool IsCompressed(_In_ DXGI_FORMAT& fmt) noexcept;
	API bool IsPacked(_In_ DXGI_FORMAT& fmt) noexcept;
	API bool IsVideo(_In_ DXGI_FORMAT& fmt) noexcept;
	API bool IsPlanar(_In_ DXGI_FORMAT& fmt) noexcept;
	API bool IsPalettized(_In_ DXGI_FORMAT& fmt) noexcept;
	API bool IsDepthStencil(_In_ DXGI_FORMAT& fmt) noexcept;
	API bool IsSRGB(_In_ DXGI_FORMAT& fmt) noexcept;
	API bool IsTypeless(_In_ DXGI_FORMAT& fmt, _In_ bool& partialTypeless) noexcept;
	API bool HasAlpha(_In_ DXGI_FORMAT& fmt) noexcept;
	API size_t BitsPerPixel(_In_ DXGI_FORMAT& fmt) noexcept;
	API size_t BitsPerColor(_In_ DXGI_FORMAT& fmt) noexcept;
	API DirectX::FORMAT_TYPE FormatDataType(_In_ DXGI_FORMAT& fmt) noexcept;
	API HRESULT ComputePitch(_In_ DXGI_FORMAT fmt, _In_ size_t width, _In_ size_t height, _Out_ size_t& rowPitch, _Out_ size_t& slicePitch, _In_ DirectX::CP_FLAGS flags = DirectX::CP_FLAGS_NONE) noexcept;
	API size_t ComputeScanlines(_In_ DXGI_FORMAT fmt, _In_ size_t height) noexcept;
	API DXGI_FORMAT MakeSRGB(_In_ DXGI_FORMAT fmt) noexcept;
	API DXGI_FORMAT MakeTypeless(_In_ DXGI_FORMAT fmt) noexcept;
	API DXGI_FORMAT MakeTypelessUNORM(_In_ DXGI_FORMAT fmt) noexcept;
	API DXGI_FORMAT MakeTypelessFLOAT(_In_ DXGI_FORMAT fmt) noexcept;
	API size_t ComputeIndex(DirectX::TexMetadata* metadata, _In_ size_t mip, _In_ size_t item, _In_ size_t slice) noexcept;
	// Returns size_t(-1) to indicate an out-of-range error

	API bool IsCubemap(DirectX::TexMetadata* metadata) noexcept;
	// Helper for miscFlags

	API bool IsPMAlpha(DirectX::TexMetadata* metadata) noexcept;
	API void SetAlphaMode(DirectX::TexMetadata* metadata, DirectX::TEX_ALPHA_MODE mode) noexcept;
	API DirectX::TEX_ALPHA_MODE GetAlphaMode(DirectX::TexMetadata* metadata) noexcept;
	// Helpers for miscFlags2

	API bool IsVolumemap(DirectX::TexMetadata* metadata) noexcept;
	API DirectX::ScratchImage* NewScratchImage();
	API HRESULT Initialize(DirectX::ScratchImage* img, _In_ const DirectX::TexMetadata* mdata, _In_ DirectX::CP_FLAGS& flags) noexcept;
	API HRESULT Initialize1D(DirectX::ScratchImage* img, _In_ DXGI_FORMAT& fmt, _In_ size_t& length, _In_ size_t& arraySize, _In_ size_t& mipLevels, _In_ DirectX::CP_FLAGS& flags) noexcept;
	API HRESULT Initialize2D(DirectX::ScratchImage* img, _In_ DXGI_FORMAT& fmt, _In_ size_t& width, _In_ size_t& height, _In_ size_t& arraySize, _In_ size_t& mipLevels, _In_ DirectX::CP_FLAGS& flags) noexcept;
	API HRESULT Initialize3D(DirectX::ScratchImage* img, _In_ DXGI_FORMAT& fmt, _In_ size_t& width, _In_ size_t& height, _In_ size_t& depth, _In_ size_t& mipLevels, _In_ DirectX::CP_FLAGS& flags) noexcept;
	API HRESULT InitializeCube(DirectX::ScratchImage* img, _In_ DXGI_FORMAT& fmt, _In_ size_t& width, _In_ size_t& height, _In_ size_t& nCubes, _In_ size_t& mipLevels, _In_ DirectX::CP_FLAGS& flags) noexcept;
	API HRESULT InitializeFromImage(DirectX::ScratchImage* img, _In_ const DirectX::Image& srcImage, _In_ bool allow1D = false, _In_ DirectX::CP_FLAGS flags = DirectX::CP_FLAGS_NONE) noexcept;
	API HRESULT InitializeArrayFromImages(DirectX::ScratchImage* img, _In_reads_(nImages) const DirectX::Image* images, _In_ size_t nImages, _In_ bool allow1D = false, _In_ DirectX::CP_FLAGS flags = DirectX::CP_FLAGS_NONE) noexcept;
	API HRESULT InitializeCubeFromImages(DirectX::ScratchImage* img, _In_reads_(nImages) const DirectX::Image* images, _In_ size_t nImages, _In_ DirectX::CP_FLAGS flags = DirectX::CP_FLAGS_NONE) noexcept;
	API HRESULT Initialize3DFromImages(DirectX::ScratchImage* img, _In_reads_(depth) const DirectX::Image* images, _In_ size_t depth, _In_ DirectX::CP_FLAGS flags = DirectX::CP_FLAGS_NONE) noexcept;
	API void ScratchImageRelease(DirectX::ScratchImage** img) noexcept;
	API bool OverrideFormat(DirectX::ScratchImage* img, _In_ DXGI_FORMAT& f) noexcept;
	API const DirectX::TexMetadata& GetMetadata(DirectX::ScratchImage* img) noexcept;
	API const DirectX::Image* GetImage(DirectX::ScratchImage* img, _In_ size_t mip, _In_ size_t item, _In_ size_t slice) noexcept;
	API const DirectX::Image* GetImages(DirectX::ScratchImage* img) noexcept;
	API size_t GetImageCount(DirectX::ScratchImage* img) noexcept;
	API uint8_t* GetPixels(DirectX::ScratchImage* img) noexcept;
	API size_t GetPixelsSize(DirectX::ScratchImage* img) noexcept;
	API bool IsAlphaAllOpaque(DirectX::ScratchImage* img);
	API HRESULT EvaluateImage(_In_ const DirectX::Image& image, _In_ std::function<void(_In_reads_(width) const DirectX::XMVECTOR* pixels, size_t width, size_t y)> pixelFunc);
	API HRESULT EvaluateImage2(_In_reads_(nimages) const DirectX::Image* images, _In_ size_t nimages, _In_ const DirectX::TexMetadata& metadata, _In_ std::function<void(_In_reads_(width) const DirectX::XMVECTOR* pixels, size_t width, size_t y)> pixelFunc);
	API HRESULT TransformImage(_In_ const DirectX::Image& image, _In_ std::function<void(_Out_writes_(width) DirectX::XMVECTOR* outPixels, _In_reads_(width) const DirectX::XMVECTOR* inPixels, size_t width, size_t y)> pixelFunc, DirectX::ScratchImage& result);
	API HRESULT TransformImage2(_In_reads_(nimages) const DirectX::Image* srcImages, _In_ size_t nimages, _In_ const DirectX::TexMetadata& metadata, _In_ std::function<void(_Out_writes_(width) DirectX::XMVECTOR* outPixels, _In_reads_(width) const DirectX::XMVECTOR* inPixels, size_t width, size_t y)> pixelFunc, DirectX::ScratchImage& result);