HexaEngine.DirectXTex/Native.cs

using Silk.NET.Direct3D11;
using Silk.NET.DXGI;
using System.Numerics;
using System.Runtime.InteropServices;
using System.Runtime.Versioning;

namespace HexaEngine.DirectXTex
{
    public static partial class Native
    {
        public const string LibName = "HexaEngine.DirectXTex.Native.dll";

        #region DXGI Format Utilities

        [LibraryImport(LibName)]
        [UnmanagedCallConv(CallConvs = new Type[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static unsafe partial bool IsValid(in Format fmt);

        [LibraryImport(LibName)]
        [UnmanagedCallConv(CallConvs = new Type[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
        [return: MarshalAs(UnmanagedType.U1)]
        public static unsafe partial byte IsCompressed(in Format fmt);

        [LibraryImport(LibName)]
        [UnmanagedCallConv(CallConvs = new Type[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static unsafe partial bool IsPacked(in Format fmt);

        [LibraryImport(LibName)]
        [UnmanagedCallConv(CallConvs = new Type[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static unsafe partial bool IsVideo(in Format fmt);

        [LibraryImport(LibName)]
        [UnmanagedCallConv(CallConvs = new Type[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static unsafe partial bool IsPlanar(in Format fmt);

        [LibraryImport(LibName)]
        [UnmanagedCallConv(CallConvs = new Type[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static unsafe partial bool IsPalettized(in Format fmt);

        [LibraryImport(LibName)]
        [UnmanagedCallConv(CallConvs = new Type[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static unsafe partial bool IsDepthStencil(in Format fmt);

        [LibraryImport(LibName)]
        [UnmanagedCallConv(CallConvs = new Type[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static unsafe partial bool IsSRGB(in Format fmt);

        [LibraryImport(LibName)]
        [UnmanagedCallConv(CallConvs = new Type[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static unsafe partial bool IsTypeless(in Format fmt, [MarshalAs(UnmanagedType.Bool)] in bool partialTypeless = true);

        [LibraryImport(LibName)]
        [UnmanagedCallConv(CallConvs = new Type[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static unsafe partial bool HasAlpha(in Format fmt);

        [LibraryImport(LibName)]
        [UnmanagedCallConv(CallConvs = new Type[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
        public static unsafe partial ulong BitsPerPixel(in Format fmt);

        [LibraryImport(LibName)]
        [UnmanagedCallConv(CallConvs = new Type[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
        public static unsafe partial ulong BitsPerColor(in Format fmt);

        [LibraryImport(LibName)]
        [UnmanagedCallConv(CallConvs = new Type[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
        public static unsafe partial FormatType FormatDataType(in Format fmt);

        [LibraryImport(LibName)]
        [UnmanagedCallConv(CallConvs = new Type[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
        public static unsafe partial int ComputePitch(in Format fmt, in ulong width, in ulong height, ulong* rowPitch, ulong* slicePitch, in CPFlags flags = CPFlags.NONE);

        [LibraryImport(LibName)]
        [UnmanagedCallConv(CallConvs = new Type[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
        public static unsafe partial ulong ComputeScanlines(in Format fmt, in ulong height);

        [LibraryImport(LibName)]
        [UnmanagedCallConv(CallConvs = new Type[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
        public static unsafe partial Format MakeSRGB(in Format fmt);

        [LibraryImport(LibName)]
        [UnmanagedCallConv(CallConvs = new Type[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
        public static unsafe partial Format MakeTypeless(in Format fmt);

        [LibraryImport(LibName)]
        [UnmanagedCallConv(CallConvs = new Type[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
        public static unsafe partial Format MakeTypelessUNORM(in Format fmt);

        [LibraryImport(LibName)]
        [UnmanagedCallConv(CallConvs = new Type[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
        public static unsafe partial Format MakeTypelessFLOAT(in Format fmt);

        #endregion DXGI Format Utilities

        #region TexMetadataMethods

        [LibraryImport(LibName)]
        [UnmanagedCallConv(CallConvs = new Type[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
        public static unsafe partial ulong ComputeIndex(TexMetadata* metadata, in ulong mip, in ulong item, in ulong slice);

        // Returns ulong(-1) to indicate an out-of-range error
        [LibraryImport(LibName)]
        [UnmanagedCallConv(CallConvs = new Type[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static unsafe partial bool IsCubemap(TexMetadata* metadata);

        // Helper for miscFlags
        [LibraryImport(LibName)]
        [UnmanagedCallConv(CallConvs = new Type[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static unsafe partial bool IsPMAlpha(TexMetadata* metadata);

        [LibraryImport(LibName)]
        [UnmanagedCallConv(CallConvs = new Type[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
        public static unsafe partial void SetAlphaMode(TexMetadata* metadata, TexAlphaMode mode);

        [LibraryImport(LibName)]
        [UnmanagedCallConv(CallConvs = new Type[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
        public static unsafe partial TexAlphaMode GetAlphaMode(TexMetadata* metadata);

        // Helpers for miscFlags2
        [LibraryImport(LibName)]
        [UnmanagedCallConv(CallConvs = new Type[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static unsafe partial bool IsVolumemap(TexMetadata* metadata);

        // Helper for dimension

        #endregion TexMetadataMethods

        #region ScratchImageInternal

        [LibraryImport(LibName)]
        [UnmanagedCallConv(CallConvs = new Type[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
        public static unsafe partial void* NewScratchImage();

        [LibraryImport(LibName)]
        [UnmanagedCallConv(CallConvs = new Type[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
        public static unsafe partial int Initialize(void* img, in TexMetadata* mdata, in CPFlags flags = CPFlags.NONE);

        [LibraryImport(LibName)]
        [UnmanagedCallConv(CallConvs = new Type[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
        public static unsafe partial int Initialize1D(void* img, in Format fmt, in ulong length, in ulong arraySize, in ulong mipLevels, in CPFlags flags = CPFlags.NONE);

        [LibraryImport(LibName)]
        [UnmanagedCallConv(CallConvs = new Type[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
        public static unsafe partial int Initialize2D(void* img, in Format fmt, in ulong width, in ulong height, in ulong arraySize, in ulong mipLevels, in CPFlags flags = CPFlags.NONE);

        [LibraryImport(LibName)]
        [UnmanagedCallConv(CallConvs = new Type[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
        public static unsafe partial int Initialize3D(void* img, in Format fmt, in ulong width, in ulong height, in ulong depth, in ulong mipLevels, in CPFlags flags = CPFlags.NONE);

        [LibraryImport(LibName)]
        [UnmanagedCallConv(CallConvs = new Type[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
        public static unsafe partial int InitializeCube(void* img, in Format fmt, in ulong width, in ulong height, in ulong nCubes, in ulong mipLevels, in CPFlags flags = CPFlags.NONE);

        [LibraryImport(LibName)]
        [UnmanagedCallConv(CallConvs = new Type[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
        public static unsafe partial int InitializeFromImage(void* img, in Image* srcImage, [MarshalAs(UnmanagedType.Bool)] in bool allow1D = false, in CPFlags flags = CPFlags.NONE);

        [LibraryImport(LibName)]
        [UnmanagedCallConv(CallConvs = new Type[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
        public static unsafe partial int InitializeArrayFromImages(void* img, Image* images, in ulong nImages, [MarshalAs(UnmanagedType.Bool)] in bool allow1D = false, in CPFlags flags = CPFlags.NONE);

        [LibraryImport(LibName)]
        [UnmanagedCallConv(CallConvs = new Type[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
        public static unsafe partial int InitializeCubeFromImages(void* img, Image* images, in ulong nImages, in CPFlags flags = CPFlags.NONE);

        [LibraryImport(LibName)]
        [UnmanagedCallConv(CallConvs = new Type[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
        public static unsafe partial int Initialize3DFromImages(void* img, Image* images, in ulong depth, in CPFlags flags = CPFlags.NONE);

        [LibraryImport(LibName)]
        [UnmanagedCallConv(CallConvs = new Type[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
        public static unsafe partial void ScratchImageRelease(void** img);

        [LibraryImport(LibName)]
        [UnmanagedCallConv(CallConvs = new Type[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
        public static unsafe partial byte OverrideFormat(void* img, in Format f);

        [LibraryImport(LibName)]
        [UnmanagedCallConv(CallConvs = new Type[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
        public static unsafe partial TexMetadata* GetMetadata(void* img);

        [LibraryImport(LibName)]
        [UnmanagedCallConv(CallConvs = new Type[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
        public static unsafe partial Image* GetImage(void* img, in ulong mip, in ulong item, in ulong slice);

        [LibraryImport(LibName)]
        [UnmanagedCallConv(CallConvs = new Type[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
        public static unsafe partial Image* GetImages(void* img);

        [LibraryImport(LibName)]
        [UnmanagedCallConv(CallConvs = new Type[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
        public static unsafe partial ulong GetImageCount(void* img);

        [LibraryImport(LibName)]
        [UnmanagedCallConv(CallConvs = new Type[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
        public static unsafe partial byte* GetPixels(void* img);

        [LibraryImport(LibName)]
        [UnmanagedCallConv(CallConvs = new Type[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
        public static unsafe partial ulong GetPixelsSize(void* img);

        [LibraryImport(LibName)]
        [UnmanagedCallConv(CallConvs = new Type[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static unsafe partial bool IsAlphaAllOpaque(void* img);
